--- a/src/frontend/pages/add.html
+++ b/src/frontend/pages/add.html
@@ -5,7 +5,10 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <form method="post" action="">
+            <form method="post">
+            <div class="alert alert-danger" role="alert" id="message" style="display: none;">
+                
+            </div>
             <div class="form-group">
                 <label for="sku">SKU</label>
                 <input type="text" class="form-control" name="sku" required>
@@ -16,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label for="price">Price</label>
-                <input type="number" class="form-control" name="price" required>
+                <input type="number" step="0.01" class="form-control" name="price" required>
             </div>
             <div class="form-group">
                 <label for="type">Type</label>
@@ -27,12 +30,19 @@
                 </select>
             </div>
             <div class="form-group" id="attributes">
-                <label for="size">Size</label>
+                <label for="size">Size (MB)</label>
                 <input type="number" class="form-control" name="size" required>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
             </div>
-            <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+            <button id="submit" type="submit" class="btn btn-primary" name="submit">Submit</button>
             </form>
         </div>
     </div>
 </div>
-  <script src="/src/frontend/js/list.js"></script>
+  <script src="/src/frontend/js/add.js"></script>
