--- a/src/frontend/pages/list.html
+++ b/src/frontend/pages/list.html
@@ -4,8 +4,9 @@
 
 <div class="container">
     <form method="post" action="" class="row">
+        <div class="alert alert-success" role="alert" id="message" style="display: none;"></div>
         <div class="col-12 pb-4">    
-            <button type="submit" class="btn btn-danger" name="submit">Delete checked products</button>
+            <button type="submit" class="btn btn-danger" name="submit" id="submit">Delete checked products</button>
         </div>
         <div class="products col-12 row">
 
